# fish2-raphe-morphology

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: default.yaml
data/: fish2_clean_brain_shell.npz  raphe_superior_soma_in_roi_bodyIds.csv  selected_raphe_active_assignments.csv  selected_raphe_active_umap.csv.csv
docs/: workflow.md
notebooks/: 00_consolidated_workflow.ipynb  01_selected_raphe_figures.ipynb  02_raphe_superior_soma_in_roi_full.ipynb  03_raphe_superior_soma_in_roi_recluster_figures.ipynb  04_connectivity_next_steps.ipynb  05_student_raphe_explorer_colab.ipynb
scripts/: check_environment.py
src/fish2_raphe/: __init__.py  clustering.py  config.py  io.py  neuprint_tools.py  plotting.py
